--- a/G-Projects-2014/G-Publisher/pom.xml
+++ b/G-Projects-2014/G-Publisher/pom.xml
@@ -7,9 +7,17 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<developers>
+		<developer>
+			<name>Ajay Menon</name>
+			<email>ajay2java2dev@gmail.com	</email>
+		</developer>
+	</developers>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<appengine.target.version>1.8.8</appengine.target.version>
+		<spring.version>4.0.0.RELEASE</spring.version>
 	</properties>
 
 	<build>
